# black-hole

./: .gitignore  ARXIV_ENDORSEMENT.md  AUDITORIA.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HUGGINGFACE_GUIA.md  LICENSE  MANIFEST.in  PYPI_GUIDE.md  README.md  REDDIT_POST.md  blackhole.toml  blkh.py  blkh_web_demo.py  demo.py  fix_hf_paths.py  pyproject.toml  requirements.txt  upload_all_files.py  upload_to_huggingface.py
.github/ISSUE_TEMPLATE/: benchmark.md  bug_report.md  config.yml  feature_request.md  feedback.md
.github/workflows/: tests.yml
docs/: HUGGINGFACE_DEPLOY.md  RESEARCH.md  ROADMAP_V5.md
docs/assets/: game_system_final.json  resource_benchmark.json  v2_results.json  v3_results.json  v4_results.json  v5_charts_data.json
game_engine/: demo_game_engine.py  texture_array_export.py
game_engine/godot/: BLKHTextureLoader.gd
game_engine/server/: blkh_texture_server.py
game_engine/server/textures/: skybox.blkh8
game_engine/unity/: BLKHTextureLoader.cs
huggingface/: README.md  app.py  requirements.txt
huggingface/phase1_inr_compressor/: __init__.py  decompress.py  siren_core.py  siren_v4_bitperfect.py  siren_v5_async.py  siren_v5_atlas.py  siren_v5_audio.py  siren_v5_auto.py  siren_v5_combo.py  siren_v5_dct.py  siren_v5_fast.py  siren_v5_gpu.py  siren_v5_grayscale.py  siren_v5_hybrid.py  siren_v5_hyper.py  siren_v5_patch.py  siren_v5_photo.py  siren_v5_streaming.py  siren_v5_volume.py  siren_v5_volume_opt.py  siren_v5_wavelet_v2.py
paper/: arxiv_summary_v5_26.md  paper.tex
phase1_inr_compressor/: compress.py  decompress.py  siren_v2.py  siren_v3.py  siren_v4.py  siren_v4_meta.py  siren_v5_atlas.py  siren_v5_avif.py  siren_v5_combo.py  siren_v5_cuda.py  siren_v5_directio.py  siren_v5_distill.py  siren_v5_hybrid.py  siren_v5_hyper.py  siren_v5_meta.py  siren_v5_multiscale.py  siren_v5_palette.py  siren_v5_photo.py  siren_v5_rle.py  siren_v5_streaming.py  siren_v5_torch.py  siren_v5_video.py  siren_v5_volume.py  siren_v5_volume_opt.py  siren_v5_wavelet.py  siren_v5_wavelet_v3.py
phase2_opportunistic_daemon/: daemon.py
phase3_ejection_engine/: ejector.py
research/universe/: BHUH_BREAKTHROUGH_RESULTS.md  DOCUMENTATION_PROTOCOL.md  EXPERIMENT_01_RESULTS.md  EXPERIMENT_02_RESULTS.md  EXPERIMENT_03_RESULTS.md  EXPERIMENT_04_RESULTS.md  EXPERIMENT_05_RESULTS.md  EXPERIMENT_06_RESULTS.md  EXPERIMENT_07_RESULTS.md  EXPERIMENT_08_RESULTS.md  EXPERIMENT_10_RESULTS.md  EXPERIMENT_11_RESULTS.md  EXPERIMENT_12_RESULTS.md  EXPERIMENT_13_RESULTS.md  EXPERIMENT_15_RESULTS.md  EXPERIMENT_21_FAIR_COMPARISON.md  EXPERIMENT_22_RESULTS.md  EXPERIMENT_23_RESULTS.md  EXPERIMENT_24_RESULTS.md  EXPERIMENT_25_26_RESULTS.md  EXPERIMENT_27_RESULTS.md  EXPERIMENT_28_RESULTS.md  HONEST_BENCHMARK_RESULTS.md  HONEST_SUMMARY.md  KODAK_BENCHMARK.md  LITERATURE_REVIEW.md  RD_PLOT_DATA.json  RD_PLOT_REPORT.md  README.md  REAL_IMAGE_BENCHMARK.md  RESEARCH_REPORT.md  SPECULATIVE.md  VALIDATION_REPORT.md  coin_baseline.py  experiment_01_shared_roots.py  experiment_02_scaling_law.py  experiment_03_meta_learning.py  experiment_04_real_scaling.py  experiment_05_scaling_validation.py  experiment_06_resolution_scaling.py  (+16 more)
research/universe/benchmarks/: phase1_chart.py  phase1_scaling.py  phase1_scaling_results.json  phase24_comparison_matrix.py  phase24_comparison_results.json
research/universe/docs/: BIBLIOGRAPHY.md  EXPERIMENT_LOG.md  ROADMAP.md  THEORY.md  THEORY_VALIDATED.md
research/universe/experiments/: phase100_final_integration.py  phase10_streaming_genesis.py  phase11_video_siren.py  phase12_universal_archive.py  phase13_auto_architecture.py  phase14_multi_resolution.py  phase15_progressive_upgrade.py  phase16_dataset_scale.py  phase17_content_addressing.py  phase18_fractal_ifs.py  phase19_hash_encoding.py  phase1_bitperfect.py  phase1_multi_file_siren.py  phase1b_real_photos.py  phase20_adaptive_quality.py  phase21_kolmogorov.py  phase22_delta_compression.py  phase25_3d_volume.py  phase26_timeseries.py  phase27_lod_streaming.py  phase28_super_resolution.py  phase29_denoising.py  phase2_universal_hypernetwork.py  phase30_real_world.py  phase31_interpolation.py  phase32_theoretical_bounds.py  phase33_parallel_training.py  phase34_texture_synthesis.py  phase35_seed_sensitivity.py  phase36_universal_decoder.py  phase37_error_correction.py  phase38_data_fusion.py  phase39_thermodynamics.py  phase3_program_synthesis.py  phase40_encryption.py  phase41_quantization.py  phase42_neural_arithmetic.py  phase43_compression_limit.py  phase44_weight_pruning.py  phase45_entropy_map.py  (+61 more)
research/universe/papers/: phase1_draft.md
tests/: benchmark_atlas.py  benchmark_atlas_results.json  benchmark_bitperfect.py  benchmark_bitperfect_results.json  benchmark_cifar10.py  benchmark_combo.py  benchmark_combo_results.json  benchmark_dct_vs_jpeg_webp.py  benchmark_final_industry.py  benchmark_hybrid.py  benchmark_hybrid_results.json  benchmark_large.py  benchmark_large_hybrid_results.json  benchmark_large_results.json  benchmark_lossy.py  benchmark_lossy_results.json  benchmark_mri_realistic.py  benchmark_mri_realistic_results.json  benchmark_real.py  benchmark_real_photos.py  benchmark_real_photos_results.json  benchmark_realistic.py  benchmark_realistic_results.json  benchmark_report.json  benchmark_v5_21_final.py  benchmark_v5_results.json  benchmark_v5_vs_v4.py  benchmark_video.py  benchmark_video_results.json  benchmark_vs_avif.py  benchmark_vs_image_formats.py  benchmark_vs_image_formats_results.json  chart_atlas.py  chart_hybrid_large.py  chart_large.py  chart_lossy.py  chart_real_photos.py  chart_realistic.py  chart_video.py  chart_vs_image_formats.py  (+31 more)
tests/real_data/: test_audio.raw  test_image.raw  test_text.txt
