[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackhole-blkh"
version = "5.30.0"
description = "Black Hole (BLKH) — Neural Implicit Compression with SIREN, DCT, Wavelet, AVIF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Darlan Pereira da Silva", email = "darlan1027pc@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "torch>=2.0.0",
    "scipy>=1.10.0",
    "PyWavelets>=1.5.0",
    "zstandard>=0.22.0",
    "brotli>=1.0.0",
]
keywords = [
    "compression", "neural compression", "SIREN", "INR",
    "implicit neural representations", "lossless", "image compression",
    "data compression", "MRI", "medical imaging", "DCT", "wavelet",
    "AVIF", "JPEG", "PNG", "WebP", "bit-perfect", "lossy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
avif = ["pillow-avif-plugin>=1.0.0"]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "gradio>=4.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
web-demo = [
    "gradio>=4.0.0",
    "pillow-avif-plugin>=1.0.0",
]
game-engine = [
    "gradio>=4.0.0",
]

[project.scripts]
blkh = "blkh:main"
blkh-server = "game_engine.server.blkh_texture_server:main"
blkh-demo = "blkh_web_demo:demo"

[project.urls]
Homepage = "https://github.com/Kronos1027/black-hole"
Repository = "https://github.com/Kronos1027/black-hole"
Documentation = "https://github.com/Kronos1027/black-hole#readme"
"Bug Tracker" = "https://github.com/Kronos1027/black-hole/issues"
"Live Demo" = "https://huggingface.co/spaces/onatskyo/black-hole-blkh"
"Research" = "https://github.com/Kronos1027/black-hole/tree/main/research/universe"

[tool.setuptools]
py-modules = ["blkh", "blkh_web_demo"]

[tool.setuptools.packages.find]
include = ["phase1_inr_compressor*", "phase2_opportunistic_daemon*", "phase3_ejection_engine*", "game_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
